Fixed alignment issues, so that workshop and location are properly centre aligned both in narrow and wide view

--- a/phase3/fullfrontal.css
+++ b/phase3/fullfrontal.css
@@ -8,7 +8,7 @@
        url('/fonts/xenon2-webfont.svg#Xenon2Regular') format('svg');
   font-weight: normal;
   font-style: normal;
-  /* 8, 16, 64, 128 */                                                            
+  /* 8, 16, 64, 128 */
 }
 
 
@@ -46,7 +46,7 @@ small {
 }
 hr {
   clear: both;
-  margin: 60px 0 30px 0;
+  margin: 60px 20px 30px 20px;
   border-top: 2px solid #fff;
 }
 
@@ -58,9 +58,9 @@ header {
   z-index: 1;
   color: #000;
 
-  -webkit-font-smoothing: none;                                                      
-  -moz-font-smoothing: none;                                                         
-  -o-font-smoothing: none;                                                           
+  -webkit-font-smoothing: none;
+  -moz-font-smoothing: none;
+  -o-font-smoothing: none;
   font-smoothing: none;
 }
 header .ponch,
@@ -133,9 +133,9 @@ nav a:focus {
   font-size: 15px;
   color: #909090;
 
-  -webkit-font-smoothing: auto;                                                      
-  -moz-font-smoothing: auto;                                                         
-  -o-font-smoothing: auto;                                                           
+  -webkit-font-smoothing: auto;
+  -moz-font-smoothing: auto;
+  -o-font-smoothing: auto;
   font-smoothing: auto;
 }
 
@@ -156,9 +156,9 @@ nav a:focus {
   -ms-box-shadow: 4px 6px 0px #000;
   box-shadow: 4px 6px 0px #000;
 
-  -webkit-font-smoothing: none;                                                      
-  -moz-font-smoothing: none;                                                         
-  -o-font-smoothing: none;                                                           
+  -webkit-font-smoothing: none;
+  -moz-font-smoothing: none;
+  -o-font-smoothing: none;
   font-smoothing: none;
 }
 .button:hover,
@@ -189,9 +189,9 @@ footer .previous {
    line-height: 19px; 
    margin-bottom: 30px;
 
-  -webkit-font-smoothing: none;                                                      
-  -moz-font-smoothing: none;                                                         
-  -o-font-smoothing: none;                                                           
+  -webkit-font-smoothing: none;
+  -moz-font-smoothing: none;
+  -o-font-smoothing: none;
   font-smoothing: none; 
 }
 footer .date-twitter {
@@ -201,10 +201,10 @@ footer .date-twitter {
   text-shadow: 4px 4px 0px #000;
   margin-top: 40px;
 
-  -webkit-font-smoothing: none;                                                      
-  -moz-font-smoothing: none;                                                         
-  -o-font-smoothing: none;                                                           
-  font-smoothing: none;  
+  -webkit-font-smoothing: none;
+  -moz-font-smoothing: none;
+  -o-font-smoothing: none;
+  font-smoothing: none;
 }
 footer .date {
   display: block;
@@ -239,12 +239,18 @@ footer .left-logic:active {
 .main {
   background-image: url(/images/grad.png);
   background-repeat: repeat-x;
-  padding: 0 20px;
+  padding: 0;
   padding-top: 45px;
 }
 .main .wrapper {
   max-width: 960px;
   margin: 0 auto;  
+}
+
+.wrapper > article > *,
+.lede {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .lede {
@@ -260,6 +266,7 @@ footer .left-logic:active {
 }
 
 article {
+  overflow: hidden;
   padding-top: 30px;
 }
 h2 {
@@ -275,22 +282,14 @@ h2 {
   position: relative;
   left: 4px;
 
-  -webkit-font-smoothing: none;                                                      
-  -moz-font-smoothing: none;                                                         
-  -o-font-smoothing: none;                                                           
+  -webkit-font-smoothing: none;
+  -moz-font-smoothing: none;
+  -o-font-smoothing: none;
   font-smoothing: none;
 }
 #locations h2,
 #workshops h2 {
-  width: 307px;
-  overflow: hidden;
-  /* This is what it should be */
-  margin-left: -13px;
-  margin-right: -27px;
-
-  /* This is what it needs to be for iPhone */
-  margin-left: -18px;
-  margin-right: -22px;
+  padding: 0;
 }
 
 /* Schedule */
@@ -305,9 +304,9 @@ h2 {
   font-size: 32px;
   text-align: center;
 
-  -webkit-font-smoothing: none;                                                      
-  -moz-font-smoothing: none;                                                         
-  -o-font-smoothing: none;                                                           
+  -webkit-font-smoothing: none;
+  -moz-font-smoothing: none;
+  -o-font-smoothing: none;
   font-smoothing: none;
 }
 .schedule time {
@@ -327,8 +326,9 @@ h2 {
 .schedule .current {
   background: #0eaf16;
   color: #fff;
-  margin: 20px -20px;
+  margin: 20px -50%;
   padding: 10px;
+  width: 200%;
 }
 .schedule .current a {
   color: #fff;
@@ -352,9 +352,9 @@ h2 {
   font-size: 16px;
   text-align: center;
 
-  -webkit-font-smoothing: none;                                                      
-  -moz-font-smoothing: none;                                                         
-  -o-font-smoothing: none;                                                           
+  -webkit-font-smoothing: none;
+  -moz-font-smoothing: none;
+  -o-font-smoothing: none;
   font-smoothing: none;
 }
 .speaker h3 a,
@@ -410,9 +410,9 @@ h2 {
   font-size: 32px;
   text-align: center;
 
-  -webkit-font-smoothing: none;                                                      
-  -moz-font-smoothing: none;                                                         
-  -o-font-smoothing: none;                                                           
+  -webkit-font-smoothing: none;
+  -moz-font-smoothing: none;
+  -o-font-smoothing: none;
   font-smoothing: none;
 }
 .venue span {
@@ -437,7 +437,7 @@ h2 {
 /* Sponsors */
 .sponsor {
   display: block;
-  margin: 20px 0;
+  margin: 20px;
   background-color: #fff;
   text-align: center;
   padding: 25px;
@@ -476,9 +476,9 @@ body.pullout {
   line-height: 32px;
   color: #000;
 
-  -webkit-font-smoothing: none;                                                      
-  -moz-font-smoothing: none;                                                         
-  -o-font-smoothing: none;                                                           
+  -webkit-font-smoothing: none;
+  -moz-font-smoothing: none;
+  -o-font-smoothing: none;
   font-smoothing: none;
 }
 #pullout hr {
@@ -497,9 +497,9 @@ body.pullout {
   text-align: left;
   color: #000;
 
-  -webkit-font-smoothing: auto;                                                      
-  -moz-font-smoothing: auto;                                                         
-  -o-font-smoothing: auto;                                                           
+  -webkit-font-smoothing: auto;
+  -moz-font-smoothing: auto;
+  -o-font-smoothing: auto;
   font-smoothing: auto;
 }
 #pullout h3,
